<resources>
    <string name="app_name">SmartThermostat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sensor_column_title">Sensor</string>
    <string name="temperature">Temperature</string>
    <string name="thermostat_names">Thermostat name</string>
    <string name="sensors">sensors</string>
    <string name="active">Active</string>
    <string name="min">MIN</string>
    <string name="avg">AVG</string>
    <string name="time_programmer">Time programmer</string>
    <string name="thermometers">Thermometers</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="select_sensor">\"Select the sensor to add\"</string>
    <string name="delete_thermometers">DELETE THERMOMETERS</string>
    <string name="add_thermometer">ADD THERMOMETER</string>
    <string name="thermostats">Thermostats</string>
    <string name="add_thermostat">ADD THERMOSTAT</string>
    <string name="alarm_repeat">Repeat everyday</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="label">Label</string>
    <string name="expand_alarm">Expand</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="collapse_alarm">Collapse alarm</string>
    <string name="add_program">Add Program</string>
    <string name="delete_thermostat">ELIMINAR ZONES</string>
</resources>
