<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@color/alarm_whiteish">
    <TextView
        android:id="@+id/thermometers_label"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thermometers"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/temperatures_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:background="@color/hairline">
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_thermometers"
            android:id="@+id/buttonPUT"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:clickable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_thermometer"
            android:id="@+id/buttonPOST"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_margin="3dp" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp" />

    <TextView
        android:id="@+id/thermostats_label"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thermostats"/>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/thermostat_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:background="@color/hairline"
        android:backgroundTint="@color/hairline">
    </TableLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_thermostat"
            android:id="@+id/deleteThermostats"
            android:textSize="12sp"
            android:layout_margin="3dp"
            android:layout_weight="1" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_thermostat"
            android:id="@+id/addThermostat"
            android:textSize="12sp"
            android:layout_margin="3dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
